--- a/app/src/main/res/layout/fragment_some_user.xml
+++ b/app/src/main/res/layout/fragment_some_user.xml
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".view.SomeUserFragment"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="5dp"
+    tools:context=".view.SomeUserFragment">
 
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:visibility="visible" />
+
     <ImageView
+        android:id="@+id/avatar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/avatar" />
+        android:layout_height="wrap_content" />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
         android:id="@+id/gender"
-        android:layout_margin="@dimen/text_margin"
-        />
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:layout_margin="@dimen/text_margin" />
+
+    <TextView
         android:id="@+id/nameTitle"
-        android:layout_margin="@dimen/text_margin"/>
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:layout_margin="@dimen/text_margin" />
+
+    <TextView
         android:id="@+id/nameFirst"
-        android:layout_margin="@dimen/text_margin"/>
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:layout_margin="@dimen/text_margin" />
+
+    <TextView
         android:id="@+id/nameLast"
-        android:layout_margin="@dimen/text_margin"/>
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_margin="@dimen/text_margin" />
 </LinearLayout>
+</ScrollView>
